# vgra

./: setup.cfg
examples/crud/: __main__.py
examples/cruddy/: __main__.py
examples/rot/: __main__.py
vgra/: __main__.py  args.py  assignable.py  cli.py  parser.py
vgra/std/: value_parsers.py
vgra/std/arg_parsers/: pythonic_arg_parser.py
