[metadata]
name = vgra
version = 0.0.1
author = Aaron Levine
author_email = ald.levine@gmail.com
url = https://github.com/Aldlevine/mdlr.git
description = a python argparse alternative and cli generating library 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
# install_requires =

[options.package_data]
* = py.typed
